@@ -1,0 +1,46 @@
+# AGENTS.md
+
+## Purpose
+
+This file provides **orientation and guardrails** for automated agents (including Codex) and human contributors working in this repository.
+
+Before performing **any task**, agents **must read and internalize** the documents listed below.
+
+---
+
+## Required Reading (In Order)
+
+1. **OVERVIEW.md**  
+   This document defines:
+   - The identity and goals of the project
+   - The relationship to the legacy MUD *Moral Decay*
+   - The phased development model and constraints, which are mandatory unless explicitly overridden
+
+2. **CODE-STYLE.md**  
+   This document defines:
+   - LPC formatting and style conventions
+   - File organization patterns
+   - Naming conventions
+   - Acceptable vs. discouraged abstractions
+
+   Agents should assume that **CODE-STYLE.md is authoritative**, even if other files appear inconsistent.
+
+3. **PROSE.md**  
+   This document defines:
+   - Room naming rules
+   - Room description length and structure
+   - Narrative tone and restraint
+   - Sensory and atmospheric writing conventions
+
+   Prose is treated as a **first-class system** in this project. Agents must not generate descriptive text that violates these constraints.
+
+---
+
+## Summary for Agents
+
+- Read **OVERVIEW.md** first to understand the project’s intent and current phase
+- Follow **CODE-STYLE.md** when writing or modifying any code
+- Follow **PROSE.md** when writing or modifying any player-facing text
+
+When in doubt, favor restraint, clarity, and silence over completeness or cleverness.
+
