@@ -1,0 +1,156 @@
+# PROSE.md
+
+## Purpose
+
+This document defines the **authoritative prose and narrative style** for *Moral Despair*.
+
+The primary goal of prose in this mudlib is to **say a lot with a little**. Descriptions should be evocative, restrained, and immersive without overwhelming the player with text.
+
+Prose is a core system in Moral Despair. Treat it with the same care as code.
+
+---
+
+## Core Prose Philosophy
+
+1. **Tight and concise, but emotionally loaded**  
+   Every word should earn its place.
+
+2. **Atmosphere over exposition**  
+   The world should suggest its history, not explain it.
+
+3. **Less text, more weight**  
+   Immersion comes from implication, not volume.
+
+4. **Let the player feel on their own**  
+   Never instruct the player how to feel.
+
+---
+
+## Room Names
+
+Room names are intentionally minimal.
+
+### Rules
+
+- Use **one or two words** whenever possible
+- Three words is the absolute maximum
+- Capitalize **every word**
+- **Never** begin a room name with "A" or "An"
+
+### Good Examples
+
+- `Broken Causeway`
+- `West Gate`
+- `Fallen Tower`
+- `Salt Flats`
+
+### Avoid
+
+- `A Broken Causeway`
+- `An Old Road`
+- `The Ruins of the West Gate`
+- Overly poetic or sentence-like titles
+
+Room names should act as anchors, not descriptions.
+
+---
+
+## Room Descriptions
+
+### Length
+
+- **Two to three sentences** is ideal
+- **Four sentences maximum**
+- One sentence is acceptable only in rare, intentional cases
+
+### Style Guidelines
+
+- Favor concrete imagery over abstraction
+- Allow some language overlap between adjacent rooms, but avoid copy-paste repetition
+- Vary sentence structure and cadence across nearby rooms
+
+Descriptions should feel curated, not procedurally generated.
+
+---
+
+## Emotional Restraint
+
+**Never tell the player how they feel.**
+
+Avoid language that dictates emotion, such as:
+
+- "You feel uneasy"
+- "This place makes you sad"
+- "You are filled with dread"
+
+Instead, let emotion emerge naturally from the environment, pacing, and silence.
+
+The player supplies the feeling. The world supplies the cause.
+
+---
+
+## Ambience and Sensory Detail
+
+Ambience is strongly encouraged, but must be handled indirectly.
+
+### Rules
+
+- Do **not** use second-person sensory framing
+- Avoid phrases like:
+  - "You see"
+  - "You hear"
+  - "You smell"
+
+### Preferred Approach
+
+State sensory details as facts of the world:
+
+- "A hidden cricket chirps nearby."
+- "A light breeze wafts across the field here."
+- "The air carries the scent of damp stone and rot."
+- "Cold fog clings low to the ground."
+
+This keeps the prose immersive without breaking perspective.
+
+---
+
+## Duplication and Variation
+
+Some duplication of language between adjacent rooms is acceptable and often desirable, especially for:
+
+- Large open areas
+- Roads, plains, or corridors
+- Transitional spaces
+
+However:
+
+- Vary at least one image, detail, or sentence structure per room
+- Avoid identical descriptions across multiple rooms
+
+The world should feel continuous, not copied.
+
+---
+
+## What to Avoid
+
+- Walls of text
+- Lore dumps
+- Overly poetic or self-indulgent language
+- Modern slang or meta commentary
+- Emotional instructions to the player
+
+---
+
+## Prose Authority
+
+This file is **authoritative**.
+
+If a conflict arises between:
+- Existing room descriptions
+- Personal writing style
+- External mudlib conventions
+
+**PROSE.md wins.**
+
+When in doubt, remove words.
+
