@@ -1,3 +1,3 @@
-Welcome to MORAL DESPAIR.
 This world is under development, but you are welcome to look around.
+Please expect frequent reboots in the beginning.
 January 2026
