@@ -6,10 +6,10 @@ void reset(int arg) {
 
     set_light(1);
 
-    short_desc = "Ashen Ruins";
-    long_desc = "Ash lies thick over cracked stone and splintered timbers. The "
-        + "air smells of old smoke, and deep gouges show where something "
-        + "massive tore through.\n";
+    short_desc = "Portal Room";
+    long_desc = "This is the portal room.\n" +
+	        "As development continues, these areas will be removed from the portal room\n" +
+		"and linked to the full world.\n";
     dest_dir = ({
         "domain/original/area/vesla/sanctuary", "up",
         "domain/original/area/island/room605", "island",
